# otroff

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  C17_CONVERSION_STATUS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  Makefile  README.md  cmake_fix_template.txt  cxx17_scaffold.hpp  cxx23_scaffold.hpp  debug_missing_files.sh  gitconfigure  meson.build  setup.sh  suftab.c  suftab.cpp  suftab.h  suftab.hpp
${BUILD_DIR}/: CMakeCache.txt
.cache/clangd/index/: cxx17_scaffold.hpp.8E3738ED7A2C223B.idx  hyphen_utils.c.7872984080393613.idx  hyphen_utils.cpp.906B2B5CF746DFF2.idx  hyphen_utils.h.076FE0C5397737B5.idx  hyphen_utils.hpp.A51F5D28E31D971F.idx  os_abstraction.h.47F2CF33D48307C4.idx  os_unix.c.26253C6FAA8A7AD4.idx  roff.h.C01C62F24A4E45F4.idx  roff.hpp.97C670BE42CE62CC.idx  roff1.c.B33E556E713F7931.idx  roff1.cpp.0775103432F3156B.idx  roff1_cxx23.cpp.23A7372BAB829262.idx  roff2.c.56D5D6C8C839581F.idx  roff2.cpp.C89DA0A1DA232C80.idx  roff3.c.9850CA9EAA93CB52.idx  roff3.cpp.5F47432CCC7BF9CE.idx  roff4.c.463972A610A5C95F.idx  roff4.cpp.CF4BE67E157AE285.idx  roff5.c.956B5320A7E414C5.idx  roff5.cpp.FD67717F541A104C.idx  roff7.c.66A4A7C9E4FF8B5F.idx  roff7.cpp.3270A8197C4F014C.idx  roff8.c.53D55A54CBA6A815.idx  roff8.cpp.006C72F4FC1C05D3.idx  roff_globals.hpp.D3A8EC2C6E993000.idx  runtime.c.26241A6DB16A9267.idx  runtime.cpp.42B6FC2E9EE051DD.idx  runtime.h.30462A155559CB3F.idx  runtime.hpp.0B7F6706FAEE20EC.idx  sse_memops.c.70AF12AAF3DC79AA.idx  sse_memops.cpp.D75089E01CED8C42.idx  sse_memops.h.51CDF63680C94428.idx  sse_memops.hpp.9647A8E067E62885.idx  time_utils.c.FCD3A08F74E771C4.idx  time_utils.cpp.05183A2F8EE727F9.idx  time_utils.h.26F182A6DFC0E6CC.idx  time_utils.hpp.04AC6F77CA37A2D5.idx
.github/workflows/: ci.yml
cmake/Modules/: CodeQuality.cmake  EnvironmentDetection.cmake  EnvironmentDetection_Minimal.cmake
croff/: CMakeLists.txt  Makefile.n8  N8_DOCUMENTATION.md  README.md  bothrc.py  case_stubs.c  env.h  env.hpp  hytab.c  hytab.cpp  hytab.h  hytab.hpp  hytab_api.c  main_stub.c  n1.c  n1.cpp  n10.c  n10.cpp  n2.c  n2.cpp  n3.c  n3.cpp  n4.c  n4.cpp  n5.c  n5.cpp  n6.c  n6.cpp  n7.c  n7.cpp  n8.c  n8.cpp  n9.c  n9.cpp  ni.c  ni.cpp  nii.c  nii.cpp  nrc.py  ntab.c  (+39 more)
croff/term/: code.300  dasi300_code_table.h  dasi300_code_table.hpp  tab300-12.c  tab300-12.cpp  tab300.c  tab300.cpp  tab300s-12.c  tab300s-12.cpp  tab300s.c  tab300s.cpp  tab37.c  tab37.cpp  tab450-12-8.c  tab450-12-8.cpp  tab450-12.c  tab450-12.cpp  tab450.c  tab450.cpp  tabtn300.c  tabtn300.cpp  tabvt100.c  tabvt100.cpp  tabvt220.c  tabvt220.cpp  terminfo.c  terminfo.cpp  termrc  test_code.300  vt220_terminal.c  vt220_terminal.cpp  vt220_terminal.h  vt220_terminal.hpp
docs/: FILE_EXTENSION_RATIONALIZATION_PLAN.md  POC_HYPHENATION_REFACTORING.md  POC_LESSONS_LEARNED.md
neqn/: ${NEQN_BASIC_TEST_INPUT_FILE}  CMakeLists.txt  Makefile  PROJECT_STRUCTURE.md  README.md  main_stub.c  ne.g  ne.h  ne.hpp  ne0.c  ne0.cpp  ne1.c  ne1.cpp  ne2.c  ne2.cpp  ne3.c  ne3.cpp  ne4.c  ne4.cpp  ne5.c  ne5.cpp  ne6.c  ne6.cpp  ne_core.c  ne_core.cpp  ne_symbols.c  ne_symbols.cpp  nelex.c  nelex.cpp  neqn.c  neqn.cpp  neqnrc.py  setup_complete.sh  test_ne2.c  test_ne2.cpp  test_neqn.c  test_neqn.cpp  test_runner.sh  y.tab.c  y.tab.cpp
neqn/examples/: advanced_equations.txt  basic_equations.txt
roff/: CMakeLists.txt  README.md  _roff8.cpp.bak  cxx17_scaffold.hpp  hyphen_utils.c  hyphen_utils.cpp  hyphen_utils.h  hyphen_utils.hpp  main.c  main.cpp  roff.h  roff.hpp  roff1.c  roff1.cpp  roff1_cxx23.cpp  roff1_cxx23.cpp.bak  roff1_full.c  roff2.c  roff2.cpp  roff2.cpp.bak  roff3.c  roff3.cpp  roff4.c  roff4.cpp  roff4.s  roff5.c  roff5.cpp  roff7.c  roff7.cpp  roff8.c  roff8.cpp  roff_c.h  roff_context.cpp  roff_context.hpp  roff_globals.c  roff_globals.hpp  runtime.c  runtime.cpp  runtime.h  runtime.hpp  (+10 more)
src/: stubs.c  stubs.cpp
src/core/: hyphenation.h
src/os/: os_abstraction.h  os_abstraction.hpp  os_unix.c  os_unix.cpp  os_unix.h  os_windows.c  os_windows.cpp
tbl/: CMakeLists.txt  README.md  main_stub.c  t..c  t0.c  t0.cpp  t1.c  t1.cpp  t2.c  t2.cpp  t3.c  t3.cpp  t4.c  t4.cpp  t5.c  t5.cpp  t6.c  t6.cpp  t7.c  t7.cpp  t8.c  t8.cpp  t9.c  t9.cpp  tb.c  tb.cpp  tbl.h  tbl.hpp  tc.c  tc.cpp  te.c  te.cpp  tf.c  tf.cpp  tg.c  tg.cpp  ti.c  ti.cpp  tm.c  tm.cpp  (+8 more)
tests/: test_cmporder.py
tools/: ascii_tree.py  cmporder.py  git-strip-nul.sh
